# kokoro

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
data/: phrases.json
dict/: pinyin.dict
examples/: synth_directly.rs  synth_directly_v10.rs  synth_directly_v11.rs  synth_stream.rs
src/: error.rs  g2p.rs  lib.rs  loader.rs  stream.rs  synthesizer.rs  tokenizer.rs
src/g2p/: v10.rs  v11.rs
src/transcription/: en.rs  en_ipa.c  zh.rs
