[package]
name = "kokoro-tts"
description = "用于Rust的轻量级AI离线语音合成器（Kokoro TTS），可轻松交叉编译到移动端"
version = "0.2.2"
edition = "2024"
keywords = ["TTS", "Offline", "Lite", "AI", "Synthesizer"]
license = "Apache-2.0"
repository = "https://github.com/mzdk100/kokoro.git"
readme = "README.md"

[features]
use-cmudict = ["cmudict-fast"]

[dependencies]
bincode = "2.0.1"
chinese-number = { version = "0.7.7",default-features = false,features = ["number-to-chinese", "chinese-to-number"] }
cmudict-fast = { version = "0.8.0", optional = true }
futures = "0.3.31"
jieba-rs = "0.7.2"
log = "0.4.27"
ndarray = "0.16.1"
ort = "2.0.0-rc.9"
pin-project = "1.1.10"
pinyin = "0.10.0"
rand="0.9.1"
regex = "1.11.1"
tokio = { version = "1.45.0",features = ["fs", "rt-multi-thread","time", "sync"] }

[dev-dependencies]
anyhow = "1.0.98"
rodio = { version = "0.20.1",default-features = false,features = ["wav"] }
tokio = {version = "1.45.0",features = ["macros"]}

[build-dependencies]
cc = "1"